src/objects/IAD_Case_Status_Reasons__c.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Intellectual Property</fullName>
                </value>
                <value>
                    <fullName>Personal Services</fullName>
                </value>
                <value>
                    <fullName>Attorney Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Service Inquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>Assigned for Customer Outreach</fullName>
                </value>
                <value>
                    <fullName>LZ Research Required</fullName>
                </value>
                <value>
                    <fullName>Assigned for Resolution</fullName>
                </value>
                <value>
                    <fullName>Auto Closed (Timeout) - Unresolved</fullName>
                </value>
                <value>
                    <fullName>Customer Submitting Materials</fullName>
                </value>
                <value>
                    <fullName>Customer didn&apos;t have needed info</fullName>
                </value>
                <value>
                    <fullName>Customer not reached (VM/disconnect)</fullName>
                </value>
                <value>
                    <fullName>Email Sent, Pending Response</fullName>
                </value>
                <value>
                    <fullName>Customer Submitting Revision</fullName>
                </value>
                <value>
                    <fullName>Issue Resolved (non Proofer resolution)</fullName>
                </value>
                <value>
                    <fullName>Revision Placed for Customer</fullName>
                </value>
                <value>
                    <fullName>Proofer Updated</fullName>
                </value>
                <value>
                    <fullName>Proceeding As Is/No Update Required</fullName>
                </value>
                <value>
                    <fullName>Order Cancelled</fullName>
                </value>
                <value>
                    <fullName>Customer-Requested Item Complete</fullName>
                </value>
                <value>
                    <fullName>No Order Problem (Case created in error)</fullName>
                </value>
                <value>
                    <fullName>Revision Placed on LZ.com</fullName>
                </value>
                <value>
                    <fullName>Revision Placed (after 7 day closure)</fullName>
                </value>
                <value>
                    <fullName>LZML</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>Escalated Customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LZ Working on Case</fullName>
                </value>
                <value>
                    <fullName>Waiting on Customer</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IAD Case Status Reasons</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Record_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>contains</operation>
            <value>Problem</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SR - {000}</displayFormat>
        <label>IAD Case Status Reasons Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IAD Case Status Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>